--- a/src/app/app.component.html
+++ b/src/app/app.component.html
@@ -1,4 +1,4 @@
-<link rel="stylesheet" href="https://stackpath.bootstrapcdn.com/bootstrap/4.1.3/css/bootstrap.min.css" integrity="sha384-MCw98/SFnGE8fJT3GXwEOngsV7Zt27NXFoaoApmYm81iuXoPkFOJwJ8ERdknLPMO" crossorigin="anonymous">
+
 <ul class="nav justify-content-end">
   <li class="nav-item">
     <a class="nav-link" routerLink="/dashboard">Dashboard</a>
@@ -9,11 +9,14 @@
   <li class="nav-item">
     <a class="nav-link" routerLink="/tester">Test</a>
   </li>
+  <li class="nav-item">
+    <a class="nav-link" routerLink="/components">Components</a>
+  </li>
 </ul>
 <h1>{{ title }}</h1>
+<!-- <ul *ngFor = "let data of todolist">
+  <li>Name : {{ data.id }}  title : {{ data.title }}</li> 
+</ul> -->
 <router-outlet></router-outlet>
 <app-messages></app-messages>
 
-<ul *ngFor = "let data of httpdata">
-  <li>Name : {{data.name}} Address: {{data.address.city}}</li>
-</ul>
